--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -12,9 +12,9 @@ permissions:
 jobs:
   build:
     name: Autograding
-    if: github.actor != 'github-classroom[bot]'
+    if: github.event.repository.name != 'linux-commands' && github.actor != 'github-classroom[bot]'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - uses: education/autograding@v1
